--- a/vue-music/package.json
+++ b/vue-music/package.json
@@ -11,8 +11,20 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.0.0",
+    "better-scroll": "^1.6.0",
+    "create-keyframe-animation": "^0.1.0",
+    "fastclick": "^1.0.6",
+    "good-storage": "^1.0.1",
+    "js-base64": "^2.1.9",
+    "jsonp": "0.2.1",
+    "lyric-parser": "^1.0.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-lazyload": "1.0.3",
+    "vue-router": "^3.0.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -60,8 +72,8 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
-    "stylus":"^0.54.5",
-    "style-loader": "^0.23.1"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.1"
   },
   "engines": {
     "node": ">= 6.0.0",
